<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/stalls_data_cardview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/yelow">

            <TextView
                android:id="@+id/tv_title_popup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/comicbd"
                android:text="@string/str_title_data_sosmed"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textAlignment="center"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/comic"
                    android:text="@string/str_hint_inisial_akun"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/comic"
                    android:text="@string/str_hint_data_email"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/comic"
                    android:text="@string/str_sosmed"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/comic"
                    android:text="@string/str_hint_username"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/comic"
                    android:text="@string/str_hint_data_password"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/comic"
                    android:text="@string/str_status_akun"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/comic"
                    android:text="@string/str_data_prioritas"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/search_bar" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/comic"
                    android:text="@string/str_tanda_bisnis_popup"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/search_bar" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="230dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/data_inisial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/comic"
                    android:text="-"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/data_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/comic"
                    android:text="-"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/data_sosmed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/comic"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/data_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/comic"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/data_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/comic"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/data_status_akun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/comic"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/data_prioritas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/comic"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/data_status_bisnis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/comic"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel_popup"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_btn_red_outline"
                android:focusable="false"
                android:fontFamily="@font/comicbd"
                android:text="@string/str_btn_cancel"
                android:textColor="@color/red"
                android:textSize="16dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_okey_popup"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_btn_teal_outline"
                android:focusable="false"
                android:fontFamily="@font/comicbd"
                android:text="@string/str_btn_okey"
                android:textColor="@color/teal"
                android:textSize="16dp" />
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>